--- a/package.json
+++ b/package.json
@@ -20,6 +20,14 @@
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "eslint": "7.12.1",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "^7.30.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
