--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "^7.30.1",
+    "json-server": "^0.17.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -36,7 +37,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "mock": "json-server -w -p 3333 ./mock/database.json"
   },
   "eslintConfig": {
     "extends": [
