--- a/.eslintignore
+++ b/.eslintignore
@@ -6,6 +6,8 @@
 # testing
 /coverage
 
+/src/shared/environment
+
 # production
 /build
 
@@ -15,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
